--- a/alinesno-infra-ops-pipeline-admin/pom.xml
+++ b/alinesno-infra-ops-pipeline-admin/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.alinesno.infra.base</groupId>
+		<groupId>com.alinesno.infra.ops</groupId>
 		<artifactId>alinesno-infra-ops-pipeline-parent</artifactId>
 		<version>${revision}</version>
 		<relativePath>../pom.xml</relativePath>
