--- a/alinesno-infra-ops-pipeline-third/pom.xml
+++ b/alinesno-infra-ops-pipeline-third/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-    	<groupId>com.alinesno.infra.base</groupId>
+    	<groupId>com.alinesno.infra.ops</groupId>
     	<artifactId>alinesno-infra-ops-pipeline-parent</artifactId>
 		<version>${revision}</version>
 		<relativePath>../pom.xml</relativePath>
@@ -47,7 +47,7 @@
 			<version>${wechat.mp.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.alinesno.infra.base</groupId>
+			<groupId>com.alinesno.infra.ops</groupId>
 			<artifactId>alinesno-infra-ops-pipeline-facade</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
